After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786767 - Can't close the window with the new headerbar
Can't close the window with the new headerbar
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
3.25.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-24 16:00 UTC by Bilal Elmoussaoui
Modified: 2017-08-25 14:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot showing the current Display headerbar (68.34 KB, image/png)
2017-08-24 16:00 UTC, Bilal Elmoussaoui
  Details
display: Fix the two output UI to start with the current configuration (1.21 KB, patch)
2017-08-25 13:16 UTC, Rui Matos
committed Details | Review

Description Bilal Elmoussaoui 2017-08-24 16:00:14 UTC
Created attachment 358361 [details]
Screenshot showing the current Display headerbar

Currently, with the new GCC design and the Display HeaderBar, I can't close the GCC window unless I click on another panel.


I think that instead, the current header bar should be hidden and will be shown only when the user modifies something. Because currently, the cancel button does nothing at all :( 

See the attached screenshot

PS: don't mind the missing icons; must be due an outdated version of Adwaita icon theme.
Comment 1 Rui Matos 2017-08-25 13:16:38 UTC
Created attachment 358400 [details] [review]
display: Fix the two output UI to start with the current configuration

gtk_stack_set_visible_child_name() doesn't actually make a child
visible if the child widget isn't visible already which means we'd
always start in the first ("join") stack page even if the currently
applied configuration is one of the others.
Comment 2 Rui Matos 2017-08-25 13:18:12 UTC
I think this is your bug, please re-open if this still doesn't fix it
for you.

Attachment 358400 [details] pushed as 6c4eb9f - display: Fix the two output UI to start with the current configuration
Comment 3 Bilal Elmoussaoui 2017-08-25 14:07:31 UTC
Perfect, that fixed my issue. Thanks for your work :D