display: Fix the two output UI to start with the current configuration

gtk_stack_set_visible_child_name() doesn't actually make a child
visible if the child widget isn't visible already which means we'd
always start in the first ("join") stack page even if the currently
applied configuration is one of the others.

https://bugzilla.gnome.org/show_bug.cgi?id=786767